# ChangeLog for kde-base/kdeedu-meta
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeedu-meta/ChangeLog,v 1.55 2006/09/03 15:12:39 kloeri Exp $

  03 Sep 2006; Bryan Østergaard <kloeri@gentoo.org>
  kdeedu-meta-3.5.2.ebuild:
  Stable on ia64.

*kdeedu-meta-3.5.4 (25 Jul 2006)

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  +kdeedu-meta-3.5.4.ebuild:
  Bump to 3.5.4 (pre-release).

*kdeedu-meta-3.5.3 (01 Jun 2006)

  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +kdeedu-meta-3.5.3.ebuild:
  Update to new release.

  01 Jun 2006; Thomas Cort <tcort@gentoo.org> kdeedu-meta-3.5.2.ebuild:
  Stable on alpha wrt Bug #132213.

  29 May 2006; Jason Wever <weeve@gentoo.org> kdeedu-meta-3.5.2.ebuild:
  Stable on SPARC wrt bug #132213.

  29 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -kdeedu-meta-3.4.1.ebuild, -kdeedu-meta-3.4.2.ebuild:
  Drop old versions.

  26 May 2006; Markus Rothe <corsair@gentoo.org> kdeedu-meta-3.5.2.ebuild:
  Stable on ppc64

  26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  kdeedu-meta-3.5.2.ebuild:
  Stable on amd64 wrt bug #132213

  25 May 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  kdeedu-meta-3.5.2.ebuild:
  Stable on x86 wrt bug #132213

  29 Apr 2006; Carsten Lohrke <carlo@gentoo.org> kdeedu-meta-3.4.1.ebuild,
  kdeedu-meta-3.4.2.ebuild:
  Remove kmathtool from dependencies.

  05 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  -kdeedu-meta-3.5.0.ebuild, -kdeedu-meta-3.5.1.ebuild:
  Remove 3.5.0 and 3.5.1 -meta ebuilds.

  27 Mar 2006; Aron Griffis <agriffis@gentoo.org> kdeedu-meta-3.5.0.ebuild,
  kdeedu-meta-3.5.1.ebuild, kdeedu-meta-3.5.2.ebuild:
  Mark 3.5.2 3.5.1 3.5.0 ~ia64

  27 Mar 2006; Aron Griffis <agriffis@gentoo.org> kdeedu-meta-3.4.3.ebuild:
  Mark 3.4.3 stable on ia64. #112842

*kdeedu-meta-3.5.2 (22 Mar 2006)

  22 Mar 2006; Dan Armak <danarmak@gentoo.org> +kdeedu-meta-3.5.2.ebuild: