@@ -1,13 +1,13 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkdeedu/libkdeedu-3.5.4.ebuild,v 1.1 2006/07/25 08:59:12 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkdeedu/libkdeedu-3.5.4.ebuild,v 1.2 2006/09/06 20:27:09 flameeyes Exp $
 KMNAME=kdeedu
 MAXKDEVER=$PV
 KM_DEPRANGE="$PV $MAXKDEVER"
 inherit kde-meta
 
 DESCRIPTION="common library for kde educational apps"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE=""
 DEPEND=""
 
